Style pause/resume controls; make sure crabs scale on mobile; pause animations on game pause instead of setting them to "none" (preserves animation state upon resume)

--- a/features/2018/space-invaders/src/partials/_creatures.scss
+++ b/features/2018/space-invaders/src/partials/_creatures.scss
@@ -31,7 +31,8 @@
 	animation-duration: 3s;
 	animation-timing-function: steps(5);
 	animation-fill-mode: forwards;
-	transform: scale(1,1);
+	transform: scale(.8);
+	transform-origin: left bottom;
 	transition: transform .3s linear;
 	
 	&:hover {
@@ -39,24 +40,25 @@
 	}
 	
 	&.destroyed {
-		transform: scale(1,0);
-	}
-	
-	.creature {
-		transform: scale(.8);
-		transform-origin: left bottom;
+		transform: scale(.8,0);
 	}
 	
 }
 
 @media screen and (min-width: 600px) {
-	.creature-wrapper .creature {
-		transform: scale(1);
+	.creature-wrapper {
+		
+		transform: scale(1,1);
+		
+		&.destroyed {
+			transform: scale(1,0);
+		}
+		
 	}
 }
 
 #creature-container.paused .creature {
-	animation: none;
+	animation-play-state: paused;
 }
 
 #creature-container.endgame .creature-wrapper {
