--- a/features/2018/space-invaders/src/partials/_habitats.scss
+++ b/features/2018/space-invaders/src/partials/_habitats.scss
@@ -15,7 +15,7 @@
 	background-position: left bottom;
 	background-repeat: repeat-x;
 	background-size: 512px auto;
-	border-bottom: 2rem solid #020850;
+	border-bottom: 2rem solid #333;
 }
 
 @media screen and (min-width: 350px) {
