--- a/features/2018/space-invaders/src/partials/_story.scss
+++ b/features/2018/space-invaders/src/partials/_story.scss
@@ -52,7 +52,7 @@
 
 #story-header {
 	
-	background: #020850;
+	background: #333;
 	text-align: center;
 	position: relative;
 	padding-bottom: 3rem;
